gcc/testsuite/g++.dg/cpp0x/lambda/lambda-ice11.C
// PR c++/60252
// { dg-require-effective-target c++11 }

struct A
{
  int i;			// { dg-message "" }

  void foo()
  {
    [&](){ [&](int[i]){}; };	// { dg-error "" }
  }
};
